--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,6 @@ script:
 
   # Verify Ansible is available in the container.
   - docker exec --tty test-container env TERM=xterm ansible --version
+
+  # Verify Timezone
+  - docker exec --tty test-container env TERM=xterm cat /etc/timezone
